--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ markdown_extensions:
   - md_in_html
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
@@ -42,6 +42,23 @@ plugins:
       kernel_name: runn
       include_source: True
       execute: false
+  - mkdocstrings:
+    default_handler: python
+    handlers:
+      python:
+        options:
+          docstring_section_style: spacy
+          show_bases: true
+          filters:
+            - "!^_"
+          merge_init_into_class: true
+          show_if_no_docstring: true
+          show_signature_annotations: true
+          signature_crossrefs: true
+          show_root_toc_entry: false
+          show_signature_annotations: false
+        import:
+          - https://docs.python.org/3/objects.inv
   - search
 watch:
   - runn
